<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="action_archive">Archive</string>
    <string name="action_select_theme">Select theme</string>
    <string name="action_close_search">Close search</string>
    <string name="action_delete">Delete</string>
    <string name="action_extract_details">Extract details</string>
    <string name="action_hide_archive">Hide archive</string>
    <string name="action_licenses">Open Source Licenses</string>
    <string name="action_more_options">Show more options</string>
    <string name="action_save">Save</string>
    <string name="action_save_to_webmark">Save to WebMark</string>
    <string name="action_search">Search</string>
    <string name="action_share">Share…</string>
    <string name="action_show_archive">Show archive</string>
    <string name="action_unarchive">Unarchive</string>
    <string name="action_undo">Undo</string>
    <string name="action_view_github">View on GitHub</string>

    <string name="app_name">WebMark</string>

    <string name="error_saving">Error saving page</string>

    <string name="hint_search">Search</string>

    <string name="info_app_description">Your convenient storage for links and articles.</string>
    <string name="info_archived">Archived</string>
    <string name="info_deleted">Deleted</string>
    <string name="info_duplicate_url">Link is already in your list</string>
    <string name="info_invalid_url">Invalid URL</string>
    <string name="info_made_by">Made by Łukasz Rutkowski</string>
    <string name="info_save_instructions">You can save link to any webpage from other apps by using standard share action.</string>
    <string name="info_saved">Saved to WebMark</string>
    <string name="info_unarchived">Unarchived</string>

    <string name="question_save_copied_url">Save copied URL?\n%1$s</string>

    <string name="title_about">About</string>
    <string name="title_nothing_archived">Nothing archived</string>
    <string name="title_nothing_found">Nothing found</string>
    <string name="title_nothing_saved">Nothing saved</string>
    <string name="title_share_with">Share with</string>
    <string name="title_theme_battery_saver">Set by Battery Saver</string>
    <string name="title_theme_dark">Dark</string>
    <string name="title_theme_follow_system">Use system default</string>
    <string name="title_theme_light">Light</string>
</resources>
