<?xml version="1.0" encoding="utf-8"?>
<MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Transition
        app:constraintSetEnd="@id/expandedSearchToolbarState"
        app:constraintSetStart="@id/defaultToolbarState">

        <OnClick
            app:clickAction="toggle"
            app:target="@+id/searchToggleButton" />

    </Transition>

    <ConstraintSet android:id="@+id/defaultToolbarState" />

    <ConstraintSet android:id="@+id/expandedSearchToolbarState">

        <Constraint
            android:id="@+id/searchInputView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/archiveToggleButton"
            app:layout_constraintStart_toEndOf="@+id/searchToggleButton"
            app:layout_constraintTop_toTopOf="parent" />

        <Constraint
            android:id="@+id/moreOptionsButton"
            android:layout_width="@dimen/toolbar_button_size"
            android:layout_height="@dimen/toolbar_button_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </ConstraintSet>

</MotionScene>
