...
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/action_share"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/quickShareIconImageView"
        app:layout_constraintStart_toEndOf="@+id/shareIconImageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_goneMarginEnd="16dp" />

    <ImageView
        android:id="@+id/quickShareIconImageView"
...
